shippable mvp phantom lol

--- a/phantom/aboutme.html
+++ b/phantom/aboutme.html
@@ -48,7 +48,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="aboutme.html">About Me</a></li>
 							<li><a href="code.html">Code Samples</a></li>
-							<li><a href="projects.html">Projects</a></li>
+							<!-- <li><a href="projects.html">Projects</a></li> -->
 							<li><a href="#" onclick='window.open("https://linkedin.com/in/oliver-terrell");return false;'>LinkedIn&reg;</a></li>
 						</ul>
 					</nav>
@@ -66,7 +66,10 @@
 							<p>I fell in love with software development because it is intellectually stimulating, challenging, and creative. In my two years of experience, I have been chief engineer of three web applications, two of which were developed by a software company I co-founded: <a href="https://greenstargroup.org" target="_blank">Greenstar Group, Inc</a>.</p>
 							<p></p>
 							</div>
-							<div id="long-story" style="display:none;">
+
+				<!-- Long story -->
+
+							<!-- <div id="long-story" style="display:none;">
 							<p>I was born in Virginia, in a small suburb outside of Richmond called Midlothian. When I was in 4th grade, my family moved to State College, Pennsylvania where I spent the rest of my formative years.</p>
 							<p>I was recruited to play football for Carnegie Mellon University and enrolled in the Tepper School of Business in 2011. As I grew my love for athletics as a member of the Football and Track & Field teams, I became increasingly passionate about health and wellness. I chose to take a leave of absence from Carnegie Mellon in the spring of 2014 and set my sights on Massage Therapy school.</p>
 							<p>My time in massage school taught me much about life. I found answers to many questions I asked, and even more to questions I did not think to ask. The world of holistic health intrigued me a great deal, but I felt I needed a more intellectually stimulating life than what the practice offered to me. I chose to return to Carnegie Mellon in the spring of 2016 with a brand new vision.</p>
@@ -80,15 +83,18 @@
 							<p>Shortly after I began the program, I got in touch with an old friend Jacob, whom I met on the Track & Field team the second time I went to college. He had a startup in the EdTech space called Uncommon Core and I was able to get some real experience working with him.</p>
 							<p>For the next 6 months, we would spend every day on Zoom coding together. He was an excellent tutor, having served as a graduate level TA for multiple computer science courses in college. By the third month in I was being left alone to complete solo features and pipelines across Python, PHP, and JavaScript languages.</p>
 							<p>An opportunity presented itself to us when a friend of Jacob's FinTech supplier was purchased and was turning off his portfolio optimizing service.</p>
-							</div>
+							</div> -->
+
+				<!-- Long story -->
+
 							<h3>Education</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
+							<p>Coming Soon</p>
 							<h3>Skills</h3>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<p>Coming Soon</p>
 							<h3>Work Experience</h3>
-							<p>Put in a nice table here.</p>
+							<p>Coming Soon</p>
 							<h3>Hobbies & Interests</h3>
-							<p>Expound upon them here.</p>
+							<p>Coming Soon</p>
 						</div>
 					</div>
 
