--- a/phantom/index.html
+++ b/phantom/index.html
@@ -47,7 +47,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="aboutme.html">About Me</a></li>
 							<li><a href="code.html">Code Samples</a></li>
-							<li><a href="projects.html">Projects</a></li>
+							<!-- <li><a href="projects.html">Projects</a></li> -->
 							<li><a href="#" onclick='window.open("https://linkedin.com/in/oliver-terrell");return false;'>LinkedIn&reg;</a></li>
 						</ul>
 					</nav>
@@ -61,8 +61,8 @@
 							</header>
 							<section class="tiles">
 								<article class="style1">
-									<span class="image">
-										<img src="../assets/img/oliver-tn.jpg" alt="" />
+									<span class="image" style="border-radius: 5%;">
+										<img src="../assets/img/oliver-tn.jpg" alt="" style="filter:brightness(110%);" />
 									</span>
 									<a href="aboutme.html">
 										<h2>About Me</h2>
@@ -71,20 +71,20 @@
 										</div>
 									</a>
 								</article>
-								<article class="style2">
+								<!-- <article class="style2">
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="projects.html">
+									<a href="#">
 										<h2>Projects</h2>
 										<div class="content">
 											<p>Details about currently deployed projects and my project graveyard.</p>
 										</div>
 									</a>
-								</article>
+								</article> -->
 								<article class="style3">
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+									<span class="image" style="border-radius: 5%;">
+										<img src="../assets/img/ghoozie-tn.jpg" alt="" style="filter:brightness(200%);" />
 									</span>
 									<a href="code.html">
 										<h2>Code Samples</h2>
@@ -93,7 +93,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style4">
+								<!-- <article class="style4">
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
@@ -191,7 +191,7 @@
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
-								</article>
+								</article> -->
 							</section>
 						</div>
 					</div>
