goPhantom on load!

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 
 </head>
-<body onload="goBasic()">
+<body onload="goPhantom()">
 
 
     <a href="./bootstrap/index.html">Basic</a>
@@ -17,9 +17,9 @@
 
 
     <script>
-        function goBasic() {
+        function goPhantom() {
             if (! window.location.href.includes('localhost')) {
-                window.location.replace("https://ghoozie.tk/bootstrap/index.html");
+                window.location.replace("https://ghoozie.tk/phantom/index.html");
             }
         }
     </script>
