--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <body onload="goPhantom()">
 
 
-    <a href="./bootstrap/index.html">Basic</a>
+    <!-- <a href="./bootstrap/index.html">Basic</a>
         &nbsp;&nbsp;&nbsp;
     <a href="./phantom/index.html">Phantom</a>
         &nbsp;&nbsp;&nbsp;
-    <a href="./react/Rindex.html">Reactor</a>
+    <a href="./react/Rindex.html">Reactor</a> -->
 
 
 
