--- a/phantom/generic.html
+++ b/phantom/generic.html
@@ -47,7 +47,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="aboutme.html">About Me</a></li>
 							<li><a href="code.html">Code Samples</a></li>
-							<li><a href="projects.html">Projects</a></li>
+							<!-- <li><a href="projects.html">Projects</a></li> -->
 							<li><a href="#" onclick='window.open("https://linkedin.com/in/oliver-terrell");return false;'>LinkedIn&reg;</a></li>
 						</ul>
 					</nav>
@@ -71,10 +71,10 @@
 									<div class="row">
 										<div class="col-6 col-12-medium">
 											<ul class="alt">
-												<li><a href="mailto:ost@alumni.cmu.edu" style="text-decoration:none;" class="fa fa-envelope"> ost@alumni.cmu.edu</a></li>
-												<li><a class="fa fa-phone"> (814) 360-7508</a></li>
+												<li><a href="mailto:ost@alumni.cmu.edu" style="text-decoration:none;" class="fa fa-envelope">&nbsp;ost@alumni.cmu.edu</a></li>
+												<li><a class="fa fa-phone">&nbsp;(814) 360-7508</a></li>
 												<!-- <li><a href="https://github.com/ghoozie" target="_blank" class="fas fa-laptop-code" aria-hidden="true"> GitHub</a></li> -->
-												<li><a href="https://linkedin.com/in/oliver-terrell" target="_blank" class="icon brands fas fa-linkedin" aria-hidden="true"> LinkedIn</a></li>
+												<li><a href="https://linkedin.com/in/oliver-terrell" target="_blank" class="icon brands fas fa-linkedin" aria-hidden="true">&nbsp;LinkedIn</a></li>
 											</ul>
 										</div>
 									</div>
