--- a/phantom/index.html
+++ b/phantom/index.html
@@ -204,10 +204,10 @@
 									<div class="row">
 										<div class="col-6 col-12-medium">
 											<ul class="alt">
-												<li><a href="mailto:ost@alumni.cmu.edu" style="text-decoration:none;" class="fa fa-envelope"> ost@alumni.cmu.edu</a></li>
-												<li><a class="fa fa-phone"> (814) 360-7508</a></li>
+												<li><a href="mailto:ost@alumni.cmu.edu" class="fa fa-envelope">&nbsp;ost@alumni.cmu.edu</a></li>
+												<li><a class="fa fa-phone">&nbsp;(814) 360-7508</a></li>
 												<!-- <li><a href="https://github.com/ghoozie" target="_blank" class="fas fa-laptop-code" aria-hidden="true"> GitHub</a></li> -->
-												<li><a href="https://linkedin.com/in/oliver-terrell" target="_blank" class="icon brands fas fa-linkedin" aria-hidden="true"> LinkedIn</a></li>
+												<li><a href="https://linkedin.com/in/oliver-terrell" target="_blank" class="icon brands fas fa-linkedin" aria-hidden="true">&nbsp;LinkedIn</a></li>
 											</ul>
 										</div>
 									</div>
