--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             } else {
                 var basic = document.createElement("a");
                     basic.innerHTML = "Basic<br><br>";
-                    basic.setAttribute("href", "./bootstrap.index.html");
+                    basic.setAttribute("href", "./bootstrap/index.html");
 
                 var phantom = document.createElement("a");
                     phantom.innerHTML = "Phantom<br><br>";
