--- a/phantom/aboutme.html
+++ b/phantom/aboutme.html
@@ -124,7 +124,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li><code>&copy; ghoozie</code> All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li><code>&copy; ghoozie</code> All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a> <a href="images/ghoozie-blue-gradient.png" target="_blank"> bg</a></li>
 							</ul>
 						</div>
 					</footer>
