--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
                 var phantom = document.createElement("a");
                     phantom.innerHTML = "Phantom<br><br>";
-                    phantom.setAttribute("href", "./phantom/index.html");
+                    phantom.setAttribute("href", "./phantom/index.php");
 
                 var react = document.createElement("a");
                     react.innerHTML = "Reactor";
