--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script>
         function goPhantom() {
             if (! window.location.href.includes('localhost')) {
-                window.location.replace("https://ghoozie.tk/phantom/index.html");
+                window.location.replace("https://ghoozie.tk/phantom/index.php");
             } else {
                 var basic = document.createElement("a");
                     basic.innerHTML = "Basic<br><br>";
