--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <script>
         if (! window.location.href.includes('localhost')) {
-            window.location.assign("https://ghoozie.tk/phantom/index.php");
+            window.location.replace("https://ghoozie.tk/phantom/index.php");
         } else {
             var basic = document.createElement("a");
                 basic.innerHTML = "Basic<br><br>";
