no more php :/ going react

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <script>
         if (! window.location.href.includes('localhost')) {
-            window.location.replace("https://ghoozie.tk/phantom/index.php");
+            window.location.replace("https://ghoozie.tk/phantom/index.html");
         } else {
             var basic = document.createElement("a");
                 basic.innerHTML = "Basic<br><br>";
@@ -16,7 +16,7 @@
 
             var phantom = document.createElement("a");
                 phantom.innerHTML = "Phantom<br><br>";
-                phantom.setAttribute("href", "./phantom/index.php");
+                phantom.setAttribute("href", "./phantom/index.html");
 
             var react = document.createElement("a");
                 react.innerHTML = "Reactor";
