--- a/phantom/generic.html
+++ b/phantom/generic.html
@@ -16,6 +16,10 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="../assets/img/favicon.ico">
 	<link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon.ico">
 
+	<!-- React Core JS -->
+	<script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
+	<script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
