--- a/phantom/index.html
+++ b/phantom/index.html
@@ -62,7 +62,7 @@
 						<div class="inner">
 							<header>
 								<h1>Hello there! My name is Oliver.</h1>
-								<p>I am a software engineer and web application developer. I studied undergraduate at Carnegie Mellon University, class of 2019. Click below to learn more about me, my projects, or my professional experience!</p>
+								<p>I am a software engineer and web application developer. I studied undergraduate at Carnegie Mellon University, class of 2019. Click below to learn more about me.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
