--- a/phantom/generic.html
+++ b/phantom/generic.html
@@ -31,7 +31,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="../assets/img/favicon.ico" alt="" /></span><span class="title">Home</span>
 								</a>
 
 							<!-- Nav -->
