--- a/phantom/index.html
+++ b/phantom/index.html
@@ -16,21 +16,29 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="../assets/img/favicon.ico">
 		<link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon.ico">
 
-        <!-- Angular JS -->
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
 			<div id="wrapper">
 
+
+
 				<!-- Header -->
-                <header id="header">
+				<header id="header">
 					<div class="inner">
 
 						<!-- Logo -->
 							<a href="index.html" class="logo">
-								<span class="symbol"><img src="../assets/img/favicon.ico" alt="" /></span><span class="title">Welcome</span>
+								<span class="symbol"><img src="../assets/img/favicon.ico" alt="" /></span><span class="title">
+									<script>
+										if (window.location.href.includes('index.html')) {
+											document.write('Welcome');
+										} else {
+											document.write('Home');
+										}
+									</script>
+								</span>
 							</a>
 
 						<!-- Nav -->
@@ -47,15 +55,11 @@
 				<nav id="menu">
 					<h2>Menu</h2>
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="aboutme.html">About Me</a></li>
-						<li><a href="code.html">Code Samples</a></li>
-						<!-- <li><a href="projects.html">Projects</a></li> -->
-						<li><a href="#" onclick='window.open("https://linkedin.com/in/oliver-terrell");return false;'>LinkedIn&reg;</a></li>
+						<script src="banners/menu.js"></script>
 					</ul>
 				</nav>
+				
 
-					
 
 				<!-- Main -->
 					<div id="main">
@@ -209,25 +213,19 @@
 								<div class="row">
 									<div class="col-6 col-12-medium">
 										<ul class="alt">
-											<li><a href="mailto:ost@alumni.cmu.edu" style="text-decoration:none;" class="fa fa-envelope">&nbsp;ost@alumni.cmu.edu</a></li>
-											<li><a class="fa fa-phone">&nbsp;(814) 360-7508</a></li>
-											<!-- <li><a href="https://github.com/ghoozie" target="_blank" class="fas fa-laptop-code" aria-hidden="true"> GitHub</a></li> -->
-											<li><a href="https://linkedin.com/in/oliver-terrell" target="_blank" class="icon brands fas fa-linkedin" aria-hidden="true">&nbsp;LinkedIn</a></li>
+											<script src="banners/inTouch.js"></script>
 										</ul>
 									</div>
 								</div>
 						</section>
 						<section aria-hidden="true">
 							<h2>Follow</h2>
-							<ul class="icons">
-								<li><a href="https://linkedin.com/in/oliver-terrell" target="_blank" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://instagram.com/ghoozie_" target="_blank" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://github.com/ghoozie" target="_blank" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="mailto:ost@alumni.cmu.edu" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
-							</ul>
+								<ul class="icons">
+									<script src="banners/follow.js"></script>
+								</ul>
 						</section>
 						<ul class="copyright">
-							<li><code>&copy; ghoozie</code> All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<script src="banners/botBanner.js"></script>
 						</ul>
 					</div>
 				</footer>
@@ -241,7 +239,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
 
 	</body>
 </html>
