be careful with document.write()
works here because script is processed as the document loads. when document is finished loading, dont call any more document.write as it will replace the whole document with whatever you are writing

--- a/phantom/code.html
+++ b/phantom/code.html
@@ -476,7 +476,7 @@ def send_waiting_queries_raw():
 									</ul>
 							</section>
 							<ul class="copyright">
-								<script src="banners/botBanner.js"></script>
+								<script src="banners/credits.js"></script>
 							</ul>
 						</div>
 					</footer>
