--- a/phantom/index.html
+++ b/phantom/index.html
@@ -225,7 +225,7 @@
 								</ul>
 						</section>
 						<ul class="copyright">
-							<script src="banners/botBanner.js"></script>
+							<script src="banners/credits.js"></script>
 						</ul>
 					</div>
 				</footer>
